# foam-cfd-deploy

./: .gitignore  DEPLOY.md  README.md  demo.py  pyproject.toml  requirements.txt  run_and_simulate.sh
data/eval/: new_geom_5.json  new_geom_b.json  new_geom_b_recover.json  new_geom_v2.json  ood_100.json  ood_100_v2.json  ood_prompts.json
dataset/generators/: __init__.py  airfoil.py  base.py  cavity.py  channel.py  cylinder.py  pipe.py
inference/: __init__.py  mesh_pipeline.py  server.py
openfoam_agent/: __init__.py  agent.py  case_writer.py  config.py  failure_diagnosis.py  gmsh_generator.py  knowledge_base.py  numerical_policy.py  param_extractor.py  prompt_catalog.py  prompt_refiner.py  rag.py  runner.py  schemas.py  scorer.py  solver_selector.py  training.py  ui.py
rag/: __init__.py  build_index.py  chunker.py  dataset_collector.py  llm_case_generator.py  prompt_assembler.py  rag_case_builder.py  retriever.py  store.py  template_patcher.py  validator.py  vectorizer.py
rag/store/: chunks.db  index_meta.json  vectors.npy
scripts/: ask.sh  build_hf_dataset.py  extract_external_cases.py  full_test_parallel.py  generate_training_data.py  index_knowledge_base.py  index_tutorials.py  merge_adapter.py  repl.py  repl.sh  run_agent.py  run_full_test_parallel.sh  run_pipeline.sh  run_test_inference.sh  test_inference.py  train_qlora.py  validate_rag_pipeline.py
simulation/: __init__.py  case_builder.py  foam_runner.py  results_viz.py
