[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openfoam-agent"
version = "0.3.0"
description = "LLM-powered OpenFOAM CFD agent with gmsh meshing, RAG, and RL fine-tuning"
requires-python = ">=3.10"
dependencies = [
    "gmsh>=4.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "gradio>=4.40.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "vllm>=0.19.0",
    "unsloth>=2026.4.0",
    "trl>=0.20.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
]
foam = [
    "foamlib>=1.5.0",
]

[project.scripts]
openfoam-agent = "scripts.run_agent:main"
openfoam-index = "scripts.index_tutorials:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfoam_agent*", "scripts*"]
